app/wil-app.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wil-app-deployment
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wil-app-label
  template:
    metadata:
      labels:
        app: wil-app-label
    spec:
      containers:
        - name: wil-app
          image: wil42/playground:v2
          ports:
            - containerPort: 8888
